[package]
name = "tropical_drink"
version = "0.1.0"
authors = ["Forbidden-A <BluiePlayz@Yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.0", default_features = true, features = ["cache"] }
tokio = { version = "0.2", features = ["full"] }